--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -5,10 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="about.css">    
+    <link rel="stylesheet" href="about.css"> 
+    <link rel="stylesheet" href="canv.css">    
 </head>
-<body>  
-    <div id="dynamic-content"></div>  
+<body> 
+    <nav class="navbar">
+        <img src="logo.png" alt="Logo" class="logo">
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="vrglasses.html">VR Glasses</a></li>
+            <li><a href="chat.html" id="chat-link">Chat</a></li>
+            <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
+        </ul>            
+        <div class="person-icon" onclick="toggleDropdown()">
+            <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+            <div class="dropdown-menu" id="dropdown-menu">
+              <a href="index.html">Log out</a>
+            </div>
+        </div>
+        <div class="flag-icon">
+          <img src="armenian-flag.png" alt="Armenian Flag">
+        </div>
     <div id="about-content"  class="content-container">
         <div class="about-image-container">
             <img src="home_1.jpg" alt="Self-defense Image" class="about-image">
@@ -29,7 +47,23 @@
             <p>We are more than just a self-defense platform—we’re a community...</p>
         </div>
     </div>
-    <script src="navigation.js" defer></script>
+    <script src="script.js" defer></script> 
+    <script>
+        // Toggle the dropdown menu
+        function toggleDropdown() {
+          const dropdown = document.getElementById('dropdown-menu');
+          dropdown.classList.toggle('show'); // Toggle the "show" class to show/hide the menu
+        }
+    
+        // Close dropdown if clicked outside the dropdown
+        window.onclick = function(event) {
+          const dropdown = document.getElementById('dropdown-menu');
+          const personIcon = document.querySelector('.person-icon');
+          if (!personIcon.contains(event.target)) {
+            dropdown.classList.remove('show'); // Hide dropdown if click is outside the icon
+          }
+        }
+      </script>
    
 </body>
 </html>
