--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -7,7 +7,7 @@
     <title>VR Glasses</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="canv.css">
-    <script src="navigation.js" defer></script> 
+    <!-- <script src="navigation.js" defer></script>  -->
 </head>
 
 <body>        
