--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -15,7 +15,7 @@
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="vrglasses.html">VR Glasses</a></li>
+        <li><a href="vr-glasses.html">VR Glasses</a></li>
         <li><a href="chat.html" id="chat-link">Chat</a></li>
         <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
     </ul>
