--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -11,7 +11,26 @@
 </head>
 
 <body>        
- 
+    <nav class="navbar" id="navbar-placeholder">
+        <img src="logo.png" alt="Logo" class="logo">
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="vr-glasses.html">VR Glasses</a></li>
+            <li><a href="chat.html" id="chat-link">Chat</a></li>
+            <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
+        </ul>
+        <a href="index.html">Log out</a>
+        <div class="person-icon" onclick="toggleDropdown()">
+          <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+          <div class="dropdown-menu" id="dropdown-menu">
+            <a href="index.html">Log out</a>
+          </div>
+       </div>
+        <div class="flag-icon">
+          <img src="armenian-flag.png" alt="Armenian Flag">
+        </div>
+      </nav>
       <div id="dynamic-content"></div>
       <div class="vr-content">
           <div class="vr-image-container">
@@ -22,9 +41,6 @@
               <p style="color: red;">The page is still under construction</p>
           </div>
       </div>
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
 
