--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -6,10 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="canv.css"> <!-- External CSS -->
+    <link rel="stylesheet" href="canv.css"> 
+    <link rel="stylesheet" href="quiz.css"><!-- External CSS -->
 </head>
 
 <body>
+  <nav class="navbar" id="navbar-placeholder">
+    <img src="logo.png" alt="Logo" class="logo">
+    <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="vr-glasses.html">VR Glasses</a></li>
+        <li><a href="chat.html" id="chat-link">Chat</a></li>
+        <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
+    </ul>
+    <a href="index.html">Log out</a>
+    <div class="person-icon" onclick="toggleDropdown()">
+      <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+      <div class="dropdown-menu" id="dropdown-menu">
+        <a href="index.html">Log out</a>
+      </div>
+   </div>
+    <div class="flag-icon">
+      <img src="armenian-flag.png" alt="Armenian Flag">
+    </div>
+  </nav>
     <div id="dynamic-content"></div>
       <div id="quiz-container" class="quiz-container">
           <h1>Find Out Your Self-Protection Level</h1>
