--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -38,6 +38,21 @@
           <a href="quiz_content.html" class="start-quiz-btn">Start Quiz</a>
         </div>
       </div>
-
+      <script>
+        // Toggle the dropdown menu
+        function toggleDropdown() {
+          const dropdown = document.getElementById('dropdown-menu');
+          dropdown.classList.toggle('show'); // Toggle the "show" class to show/hide the menu
+        }
+    
+        // Close dropdown if clicked outside the dropdown
+        window.onclick = function(event) {
+          const dropdown = document.getElementById('dropdown-menu');
+          const personIcon = document.querySelector('.person-icon');
+          if (!personIcon.contains(event.target)) {
+            dropdown.classList.remove('show'); // Hide dropdown if click is outside the icon
+          }
+        }
+      </script>
 </body>
 </html>
