--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -42,6 +42,22 @@
           </div>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script>
+        // Toggle the dropdown menu
+        function toggleDropdown() {
+          const dropdown = document.getElementById('dropdown-menu');
+          dropdown.classList.toggle('show'); // Toggle the "show" class to show/hide the menu
+        }
+    
+        // Close dropdown if clicked outside the dropdown
+        window.onclick = function(event) {
+          const dropdown = document.getElementById('dropdown-menu');
+          const personIcon = document.querySelector('.person-icon');
+          if (!personIcon.contains(event.target)) {
+            dropdown.classList.remove('show'); // Hide dropdown if click is outside the icon
+          }
+        }
+      </script>
 </body>
 
 </html>
