--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -30,7 +30,8 @@
         </nav>
         <div id="chat-content" class="container">
             <p class="text-container">Make sure you pass the quiz first.</p>
-            <p class="btn-secondary">Start chatting here</p>
+            <p class="btn-secondary" onclick="window.location.href='chat.html';">Start chatting here</p>
+
     
         <script>
                 // Function to dynamically load the navbar
