--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -13,24 +13,24 @@
 
 <body>
     <nav class="navbar" id="navbar-placeholder">
-        <div class="logo"></div>
+        <img src="logo.png" alt="Logo" class="logo">
         <ul class="nav-links">
-            <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('vr')">VR Glasses</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li><a href="vr-glasses.html">VR Glasses</a></li>
+            <li><a href="chat.html" id="chat-link">Chat</a></li>
+            <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
         </ul>
-        <div class="login-register">
-          <a href="javascript:void(0);" onclick="loadPage('login')">Login/Register</a>
-        </div>
-        <div class="person-icon">
-          <img src="person-icon.png" alt="Person Icon">
-        </div>
+        <div class="person-icon" onclick="toggleDropdown()">
+          <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+          <div class="dropdown-menu" id="dropdown-menu">
+            <a href="index.html">Log out</a>
+          </div>
+       </div>
         <div class="flag-icon">
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
-    </nav>
+      </nav>
     <div id="dynamic-content"></div>
     <div class="quiz-result-content">
         <div class="coach-image-container">
