--- a/backend/frontend/login.html
+++ b/backend/frontend/login.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="login.css"> 
     <link rel="stylesheet" href="canv.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script src="script.js" defer></script>    
 </head>
 <body> 
