--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Self-Defense</title>
   <link rel="stylesheet" href="canv.css">
-  <script src="navigation.js" defer></script> <!-- External JavaScript file -->
+  <!-- <script src="navigation.js" defer></script> External JavaScript file -->
   
 </head>
 <body>
@@ -44,7 +44,7 @@
       <h3><span style="color: red;">STAY PREPARED, STAY PROTECTED</span></h3>
       <p>SafeSense is a self-defense platform that assesses your safety skills, matches you with expert trainers, and guides you through personalized training to boost your confidence and preparedness.</p>
       <h3>Ready to defend confidently?</h3>
-      <a href="quiz.html">LET’S GET STARTED</a>
+      <a class="get-started-btn" href="quiz.html">LET’S GET STARTED</a>
     </div>
   </div>
   <script src="script.js" defer></script>
