--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -47,7 +47,7 @@
       <a class="get-started-btn" href="quiz.html">LET’S GET STARTED</a>
     </div>
   </div>
-  <script src="script.js" defer></script>
+  <!-- <script src="script.js" defer></script> -->
   <script>
     // Toggle the dropdown menu
     function toggleDropdown() {
