--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -6,6 +6,7 @@
   <title>Self-Defense</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="canv.css">
+  <link rel="stylesheet" href="login.css">
 </head>
 <body>
 
@@ -26,7 +27,10 @@
       <img src="armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
-
+  <div id="login-warning" style="display:none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #f8d7da; color: #721c24; padding: 10px 20px; border-radius: 5px; z-index: 1000;">
+    <strong>Warning!</strong> You must be logged in to access this section.
+    <button onclick="document.getElementById('login-warning').style.display = 'none';" style="background: none; border: none; color: #721c24; font-size: 16px; margin-left: 10px; cursor: pointer;">X</button>
+</div>
   <div id="home-content" class="page-content">
     <div class="image-container">
       <img src="home.png" alt="Self-defense Image" class="image">
