--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -26,9 +26,9 @@
       <img src="armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
-  <div id="login-warning" style="display:none; position: fixed; top: 20px; left: 50%; transform: translateX(-50%); background-color: #f8d7da; color: #721c24; padding: 10px 20px; border-radius: 5px; z-index: 1000;">
+  <div id="login-warning" class="login-warning">
     <strong>Warning!</strong> You must be logged in to access this section.
-    <button onclick="document.getElementById('login-warning').style.display = 'none';" style="background: none; border: none; color: #721c24; font-size: 16px; margin-left: 10px; cursor: pointer;">X</button>
+    <button onclick="document.getElementById('login-warning').style.display = 'none';" class="login-warning button">Close</button>
 </div>
   <div id="home-content" class="page-content">
     <div class="image-container">
