--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -27,10 +27,9 @@
     </div>
   </nav>
   <div id="dynamic-content"></div> 
-  <div class="person-icon" onclick="toggleDropdown()">
-    <img src="person-icon.png" alt="Person Icon" class="person-icon img">
-    <div class="dropdown-menu" id="dropdown-menu">
-      <a href="index.html">Log out</a>
+  <div id="home-content" class="page-content">
+    <div class="image-container">
+      <img src="home.png" alt="Self-defense Image" class="image">
     </div>
  </div>
     <div class="text-container">
