--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -6,38 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="canv.css"> <!-- External CSS -->
-   
-    
-    <script src="navigation.js" defer></script> <!-- External JavaScript file -->
+    <link rel="stylesheet" href="canv.css"> 
     <script src="quiz.js"></script>   
     
 </head>
 
 <body>
-    <nav class="navbar"  id="navbar-placeholder">
-      <div class="logo"></div>
-        <ul class="nav-links">
-            <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('vr')">VR Glasses</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
-            <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
-        </ul>
-        <div class="login-register">
-          <a href="javascript:void(0);" onclick="loadPage('login')">Login/Register</a>
-        </div>
-        <div class="person-icon">
-          <img src="person-icon.png" alt="Person Icon">
-        </div>
-        <div class="flag-icon">
-          <img src="armenian-flag.png" alt="Armenian Flag">
-        </div>
-      </nav>
+  <nav class="navbar" id="navbar-placeholder">
+    <img src="logo.png" alt="Logo" class="logo">
+    <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="vr-glasses.html">VR Glasses</a></li>
+        <li><a href="chat.html" id="chat-link">Chat</a></li>
+        <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
+    </ul>
+    <div class="person-icon" onclick="toggleDropdown()">
+      <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+      <div class="dropdown-menu" id="dropdown-menu">
+        <a href="index.html">Log out</a>
+      </div>
+   </div>
+    <div class="flag-icon">
+      <img src="armenian-flag.png" alt="Armenian Flag">
+    </div>
+  </nav>
     <div id="dynamic-content"></div>
     <div id="quizContainer" class="quiz-content">
-  
-            <!-- Dynamic content will be loaded here -->
         </div>
         <button id="nextButton" class="btn btn-primary" style="display:none;">Next</button>
         <button id="retryButton" class="btn btn-secondary" style="display:none;">Retry</button>
