--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -38,10 +38,9 @@
         </div>
       </div>
       <script>
-        // Toggle the dropdown menu
         function toggleDropdown() {
           const dropdown = document.getElementById('dropdown-menu');
-          dropdown.classList.toggle('show'); // Toggle the "show" class to show/hide the menu
+          dropdown.classList.toggle('show'); 
         }
     
         // Close dropdown if clicked outside the dropdown
