--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -11,17 +11,18 @@
   <nav class="navbar" id="navbar-placeholder">
     <img src="logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="vr-glasses.html">VR Glasses</a></li>
-        <li><a href="chat.html" id="chat-link">Chat</a></li>
-        <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
-    </ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="vr-glasses.html">VR Glasses</a></li>
+      <li><a href="chat.html" id="chat-link">Chat</a></li>
+      <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
+  </ul>
     <div class="person-icon" onclick="toggleDropdown()">
       <img src="person-icon.png" alt="Person Icon" class="person-icon img">
       <div class="dropdown-menu" id="dropdown-menu">
-        <a href="index.html">Log out</a>
+        <div class="logout" onclick="logout()">Log out</div>
       </div>
+    </div>
    </div>
     <div class="flag-icon">
       <img src="armenian-flag.png" alt="Armenian Flag">
