--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -7,7 +7,6 @@
     <title>Quiz</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="canv.css"> 
-    <link rel="stylesheet" href="quiz.css"> 
     <!-- <link rel="stylesheet" href="quiz.css"> -->
 </head>
 
@@ -31,13 +30,20 @@
       <img src="armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
-  <div id="dynamic-content"></div>
-      <div id="quiz-container" class="quiz-container">
-          <h1>Find Out Your Self-Protection Level</h1>
-          <p>Take our 10–15 question quiz to gauge your current self-defense preparedness. This quiz assesses what you already know, your reaction skills, and how prepared you are in real-life situations. Your score will help us match you with a trainer to enhance your self-defense skills.</p>
-          <a href="quiz_content.html" class="start-quiz-btn">Start Quiz</a>
-        </div>
-      </div>
+
+  <div class="quiz-container">
+    <!-- Image container (on the left) -->
+    <div class="quiz-image-container">
+        <img src="quiz.png" alt="Quiz Image" class="quiz-image">
+    </div>
+    
+    <!-- Text content (on the right) -->
+    <div class="quiz-page-content">
+        <h1>Find Out Your Self-Protection Level</h1>
+        <p>Take our 10–15 question quiz to gauge your current self-defense preparedness. This quiz assesses what you already know, your reaction skills, and how prepared you are in real-life situations. Your score will help us match you with a trainer to enhance your self-defense skills.</p>
+        <a href="quiz_content.html" class="start-quiz-btn">Start Quiz</a>
+    </div>
+  </div>
       <script>
         function toggleDropdown() {
           const dropdown = document.getElementById('dropdown-menu');
