--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -31,16 +31,15 @@
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
       </nav>
-      <div id="dynamic-content"></div>
       <div class="quiz-result-content">
-          <div class="coach-image-container">
-              <img src="coach.png" alt="Coach Image" class="coach-image">
-          </div>
-          <div class="result-text-container" id="result"> </div>
-          <a href="chat.html">
-              <button class="btn btn-primary">Start Chatting</button>
-          </a>
-      </div>
+        <div class="coach-image-container">
+            <img src="coach.png" alt="Coach Image" class="coach-image">
+        </div>
+        <div class="result-text-container" id="result"></div> <br><br><br>                                                                                                        .
+        <a href="chat.html">
+            <button class="res-btn-primary">Start Chatting</button>
+        </a>
+    </div>
     <script>
         // Retrieve quiz results from sessionStorage
         const result = JSON.parse(sessionStorage.getItem('quizResult'));
