--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -32,14 +32,15 @@
     </div>
   </nav>
     <div id="dynamic-content"></div>
-    <div id="quizContainer" class="quiz-content">
-        </div>
+    <div id="quizContainer" class="quiz-content"> </div>
+    <div class="button-container">
         <button id="nextButton" class="btn btn-primary" style="display:none;">Next</button>
         <button id="retryButton" class="btn btn-secondary" style="display:none;">Retry</button>
         <button id="finalSubmissionButton" class="btn btn-success" style="display:none;">Final Submission</button>
+    </div>
         <div id="validationMessage" class="text-danger"></div>
         <div id="result"></div>
-    </div>
+  
 
    
 </body> 
