--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -39,10 +39,7 @@
         <button id="finalSubmissionButton" class="btn btn-success" style="display:none;">Final Submission</button>
     </div>
         <div id="validationMessage" class="text-danger"></div>
-        <div id="result"></div>
-  
-
+        <div id="result" style="display:none;"></div>
    
 </body> 
-
 </html>
