--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -35,7 +35,7 @@
         <div class="coach-image-container">
             <img src="coach.png" alt="Coach Image" class="coach-image">
         </div>
-        <div class="result-text-container" id="result"></div> <br><br><br>                                                                                                        .
+        <div class="result-text-container" id="result">Your result message here</div> 
         <a href="chat.html">
             <button class="res-btn-primary">Start Chatting</button>
         </a>
