--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -29,9 +29,9 @@
             </div>
         </nav>
         <div id="chat-content" class="container">
-            <p class="text-container">Make sure you pass the quiz first.</p>
-            <p class="btn-secondary" onclick="window.location.href='chat.html';">Start chatting here</p>
-  
+            <p class="chat-text-container">Make sure you pass the quiz first.</p>
+            <p class="chat-btn-secondary" onclick="window.location.href='chat.html';">Start chatting here</p>
+          </div>
         <script src="script.js"></script> 
         
     </body>
