--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -49,18 +49,16 @@
     </div>
     <script src="script.js" defer></script> 
     <script>
-        // Toggle the dropdown menu
         function toggleDropdown() {
           const dropdown = document.getElementById('dropdown-menu');
-          dropdown.classList.toggle('show'); // Toggle the "show" class to show/hide the menu
+          dropdown.classList.toggle('show'); 
         }
-    
-        // Close dropdown if clicked outside the dropdown
+
         window.onclick = function(event) {
           const dropdown = document.getElementById('dropdown-menu');
           const personIcon = document.querySelector('.person-icon');
           if (!personIcon.contains(event.target)) {
-            dropdown.classList.remove('show'); // Hide dropdown if click is outside the icon
+            dropdown.classList.remove('show'); 
           }
         }
       </script>
