--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -13,7 +13,7 @@
     <img src="logo.png" alt="Logo" class="logo">
     <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html" id="about-link">About Us</a></li>
+        <li><a href="about.html">About Us</a></li>
         <li><a href="vr-glasses.html" id="vr-link">VR Glasses</a></li>
         <li><a href="chat.html" id="chat-link">Chat</a></li>
         <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
