--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -29,7 +29,7 @@
         </div>
     <div id="about-content"  class="content-container">
         <div class="about-image-container">
-            <img src="home_1.jpg" alt="Self-defense Image" class="about-image">
+            <img src="about.png" alt="Self-defense Image" class="about-image">
         </div>
         <div class="about-text-container">
             <h1>About Us</h1>  
