--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -27,6 +27,7 @@
         <div class="flag-icon">
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
+    </nav>
     <div id="about-content"  class="content-container">
         <div class="about-image-container">
             <img src="about.png" alt="Self-defense Image" class="about-image">
