--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -28,7 +28,7 @@
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
     </nav>
-    <div id="about-content"  class="content-container">
+    <div id="about-content"  class="about-container">
         <div class="about-image-container">
             <img src="about.png" alt="Self-defense Image" class="about-image">
         </div>
@@ -39,10 +39,9 @@
             <p>At SafeSense, we believe that everyone has the right to feel safe, no matter where they are...</p>
             <h3>What We Offer</h3>
             <ul>
-                <li>Self-Defense Preparedness Quiz</li>
-                <li>Personalized Training Recommendations</li>
-                <li>Trainer Chat & Support</li>
-                <li>Virtual Reality Training (Coming Soon)</li>
+                <li><a href="quiz.html" id="quiz-link" style ="color:black; font-weight: bold">Self-Defense Preparedness Quiz</a></li>
+                <li><a href="chat.html" id="chat-link" style ="color:black; font-weight: bold">Trainer Chat & Support</a></li>
+                <li><a href="vr-glasses.html" style ="color:black; font-weight: bold">Virtual Reality Training (Coming Soon)</a></li>
             </ul>
             <h3>Why Choose SafeSense?</h3>
             <p>We are more than just a self-defense platform—we’re a community...</p>
