--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -37,7 +37,7 @@
           </div>
           <div class="vr-text-container">
               <h2>VR Glasses</h2>
-              <p style="color: red;">The page is still under construction</p>
+              <p style="color: rgb(128,0,32);">The page is still under construction</p>
           </div>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
