--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -35,7 +35,7 @@
     </div>
     <div class="text-container">
       <h1>Welcome to SelfSense</h1>
-      <h3><span style="color: red;">STAY PREPARED, STAY PROTECTED</span></h3>
+      <h3><span style="color: rgb(128,0,32);">STAY PREPARED, STAY PROTECTED</span></h3>
       <p>SafeSense is a self-defense platform that assesses your safety skills, matches you with expert trainers, and guides you through personalized training to boost your confidence and preparedness.</p>
       <h3>Ready to defend confidently?</h3>
       <a class="get-started-btn" href="quiz.html">LET’S GET STARTED</a>
