--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -21,7 +21,7 @@
         <div class="person-icon" onclick="toggleDropdown()">
             <img src="person-icon.png" alt="Person Icon" class="person-icon img">
             <div class="dropdown-menu" id="dropdown-menu">
-              <a href="index.html">Log out</a>
+              <div class="logout" onclick="logout()">Log out</div>
             </div>
         </div>
         <div class="flag-icon">
@@ -61,7 +61,7 @@
             dropdown.classList.remove('show'); 
           }
         }
-      </script>
+    </script>
    
 </body>
 </html>
