--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -24,7 +24,7 @@
     <div class="person-icon" onclick="toggleDropdown()">
       <img src="person-icon.png" alt="Person Icon" class="person-icon img">
       <div class="dropdown-menu" id="dropdown-menu">
-        <a href="index.html">Log out</a>
+        <div class="logout" onclick="logout()">Log out</div>
       </div>
    </div>
     <div class="flag-icon">
@@ -54,6 +54,19 @@
         };
   
         history.pushState(null, null, location.href); 
+    </script>
+    <script>
+      function toggleDropdown() {
+        const dropdown = document.getElementById('dropdown-menu');
+        dropdown.classList.toggle('show'); 
+      }
+      window.onclick = function(event) {
+        const dropdown = document.getElementById('dropdown-menu');
+        const personIcon = document.querySelector('.person-icon');
+        if (!personIcon.contains(event.target)) {
+          dropdown.classList.remove('show'); 
+        }
+      }
     </script>   
 </body> 
 </html>
