--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -23,9 +23,9 @@
         <div class="person-icon" onclick="toggleDropdown()">
           <img src="person-icon.png" alt="Person Icon" class="person-icon img">
           <div class="dropdown-menu" id="dropdown-menu">
-            <a href="index.html">Log out</a>
+            <div class="logout" onclick="logout()">Log out</div>
           </div>
-       </div>
+      </div>
         <div class="flag-icon">
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
@@ -42,21 +42,19 @@
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script>
-        // Toggle the dropdown menu
-        function toggleDropdown() {
-          const dropdown = document.getElementById('dropdown-menu');
-          dropdown.classList.toggle('show'); // Toggle the "show" class to show/hide the menu
+      function toggleDropdown() {
+        const dropdown = document.getElementById('dropdown-menu');
+        dropdown.classList.toggle('show'); 
+      }
+
+      window.onclick = function(event) {
+        const dropdown = document.getElementById('dropdown-menu');
+        const personIcon = document.querySelector('.person-icon');
+        if (!personIcon.contains(event.target)) {
+          dropdown.classList.remove('show'); 
         }
-    
-        // Close dropdown if clicked outside the dropdown
-        window.onclick = function(event) {
-          const dropdown = document.getElementById('dropdown-menu');
-          const personIcon = document.querySelector('.person-icon');
-          if (!personIcon.contains(event.target)) {
-            dropdown.classList.remove('show'); // Hide dropdown if click is outside the icon
-          }
-        }
-      </script>
+      }
+    </script>
 </body>
 
 </html>
