--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -6,7 +6,8 @@
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="about.css"> 
-    <link rel="stylesheet" href="canv.css">    
+    <link rel="stylesheet" href="canv.css">
+    <script src="limitChatQuiz.js"></script>    
 </head>
 <body> 
     <nav class="navbar">
@@ -14,7 +15,7 @@
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="vr-glasses.html">VR Glasses</a></li>
+            <li><a href="vr-glasses.html" id="vr-link">VR Glasses</a></li>
             <li><a href="chat.html" id="chat-link">Chat</a></li>
             <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
         </ul>            
