--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -29,6 +29,10 @@
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
     </nav>
+    <div id="login-warning" class="login-warning">
+      <strong>Warning!</strong> You must be logged in to access this section.
+      <button onclick="document.getElementById('login-warning').style.display = 'none';" class="login-warning button">Close</button>
+  </div>
     <div id="about-content"  class="about-container">
         <div class="about-image-container">
             <img src="about.png" alt="Self-defense Image" class="about-image">
