--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -19,12 +19,16 @@
             <li><a href="chat.html" id="chat-link">Chat</a></li>
             <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
         </ul>            
-        <div class="person-icon" onclick="toggleDropdown()">
-            <img src="person-icon.png" alt="Person Icon" class="person-icon img">
-            <div class="dropdown-menu" id="dropdown-menu">
-              <div class="logout" onclick="logout()">Log out</div>
-            </div>
+
+        <div id="login-register-btn" class="about-login-btn" onclick="loginRegister()">Login/Register</div>
+        <div class="person-icon" id="person-icon-container" onclick="toggleDropdown()">
+          <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+          <div class="dropdown-menu" id="dropdown-menu">
+            <div class="logout" onclick="logout()">Log out</div>
+          </div>
         </div>
+        </div>
+      </div>
         <div class="flag-icon">
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
