--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -59,7 +59,7 @@
             }
 
             // Display score and personalized message
-            document.getElementById('result').innerHTML = `<p>${scoreMessage}</p><p>${personalizedMessage}</p>`;
+            document.getElementById('result').innerHTML = `<p>${scoreMessage}<br>${personalizedMessage}</p>`;
 
             // Display the coach's image
             const imageContainer = document.createElement('div');
