--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -18,13 +18,13 @@
       <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
   </ul>
     <div class="person-icon" onclick="toggleDropdown()">
-      <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+      <img src="person.png" alt="Person Icon" class="person-icon img">
       <div class="dropdown-menu" id="dropdown-menu">
         <div class="logout" onclick="logout()">Log out</div>
       </div>
     </div>
     <div class="flag-icon">
-      <img src="armenian-flag.png" alt="Armenian Flag">
+      <img src="flag.png" alt="Armenian Flag">
     </div>
   </nav>
   
