--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="flag-icon">
-      <img src="flag.png" alt="Armenian Flag">
+      <img src="armenian-flag.png" alt="Armenian Flag">
     </div>
   </nav>
   
