--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>   
-    <link rel="stylesheet" href="quiz_content.css"> 
+    <link rel="stylesheet" href="quiz.css"> 
     <script src="quiz.js"></script>  
 </head>
 
