--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -22,7 +22,7 @@
             <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
         </ul>
         <div class="person-icon" onclick="toggleDropdown()">
-          <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+          <img src="person.png" alt="Person Icon" class="person-icon img">
           <div class="dropdown-menu" id="dropdown-menu">
             <a href="index.html">Log out</a>
           </div>
