--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -29,8 +29,15 @@
             </div>
         </nav>
         <div id="chat-content" class="container">
-            <p class="chat-text-container">Make sure you pass the quiz first.</p>
-            <p class="chat-btn-secondary" onclick="window.location.href='chat.html';">Start chatting here</p>
+            <p class="chat-text-container" style="color:rgb(58, 57, 57);">
+              If you have a preferred coach, please select them from the options below. <br>
+              Otherwise, take our <a href="quiz.html" style="color:rgb(128,0,32); font-weight:bold; text-decoration:none;">QUIZ</a> to help us match you with the coach best suited to your needs.
+            </p>
+            <p>
+              <img src="coach_1.png" alt="coach_1" class="coach-image-chat">
+              <img src="coach_2.png" alt="coach_2" class="coach-image-chat">
+              <img src="coach_3.png" alt="coach_3" class="coach-image-chat">          
+            </p>
           </div>
         <script src="script.js"></script> 
         
