--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -22,7 +22,7 @@
 
         <div id="login-register-btn" class="about-login-btn" onclick="loginRegister()">Login/Register</div>
         <div class="person-icon" id="person-icon-container" onclick="toggleDropdown()">
-          <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+          <img src="person.png" alt="Person Icon" class="person-icon img">
           <div class="dropdown-menu" id="dropdown-menu">
             <div class="logout" onclick="logout()">Log out</div>
           </div>    
