--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -20,7 +20,7 @@
             <li><a href="quiz.html" id="quiz-link">Quiz</a></li>
         </ul>
         <div class="person-icon" onclick="toggleDropdown()">
-          <img src="person-icon.png" alt="Person Icon" class="person-icon img">
+          <img src="person.png" alt="Person Icon" class="person-icon img">
           <div class="dropdown-menu" id="dropdown-menu">
             <div class="logout" onclick="logout()">Log out</div>
           </div>
