--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -40,18 +40,6 @@
       <a class="get-started-btn" href="quiz.html">LET’S GET STARTED</a>
     </div>
   </div>
-  <script>
-    function toggleDropdown() {
-      const dropdown = document.getElementById('dropdown-menu');
-      dropdown.classList.toggle('show'); 
-    }
-    window.onclick = function(event) {
-      const dropdown = document.getElementById('dropdown-menu');
-      const personIcon = document.querySelector('.person-icon');
-      if (!personIcon.contains(event.target)) {
-        dropdown.classList.remove('show'); 
-      }
-    }
-  </script>
+  <script src="toggle.js" defer></script>
   </body>
   </html>
