--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -6,8 +6,7 @@
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="about.css"> 
-    <link rel="stylesheet" href="canv.css">
-    <script src="limitChatQuiz.js"></script>    
+    <link rel="stylesheet" href="canv.css">       
 </head>
 <body> 
     <nav class="navbar">
@@ -54,21 +53,9 @@
             <p>We are more than just a self-defense platform—we’re a community...</p>
         </div>
     </div>
-    <script src="script.js" defer></script> 
-    <script>
-        function toggleDropdown() {
-          const dropdown = document.getElementById('dropdown-menu');
-          dropdown.classList.toggle('show'); 
-        }
-
-        window.onclick = function(event) {
-          const dropdown = document.getElementById('dropdown-menu');
-          const personIcon = document.querySelector('.person-icon');
-          if (!personIcon.contains(event.target)) {
-            dropdown.classList.remove('show'); 
-          }
-        }
-    </script>
+    <script src="limitChatQuiz.js"></script> 
+    <script src="script.js"></script>
+    <script src="toggle.js"></script> 
    
 </body>
 </html>
