--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -6,7 +6,7 @@
   <title>Self-Defense</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="canv.css">
-  <script src="limitChatQuiz.js"></script>
+  <script src="limitChatQuiz.js" defer></script>
 </head>
 <body>
   <nav class="navbar">
