--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -51,19 +51,7 @@
   
     history.pushState(null, null, location.href); 
   </script> 
-  <script>
-    function toggleDropdown() {
-      const dropdown = document.getElementById('dropdown-menu');
-      dropdown.classList.toggle('show'); 
-    }
-    window.onclick = function(event) {
-      const dropdown = document.getElementById('dropdown-menu');
-      const personIcon = document.querySelector('.person-icon');
-      if (!personIcon.contains(event.target)) {
-        dropdown.classList.remove('show'); 
-      }
-    }
-  </script>
+  <script src="toggle.js"></script>
 
   
 </body> 
