--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -75,6 +75,7 @@
             loadPage('chat'); 
         }
     </script>
+    <script src="toggle.js"></script>
     <script src="quiz.js"></script> 
 
 </body>
