--- a/backend/frontend/quiz.html
+++ b/backend/frontend/quiz.html
@@ -45,18 +45,6 @@
       sessionStorage.setItem("quizStarted", "true");
     }
   </script>
-  <script>
-    function toggleDropdown() {
-      const dropdown = document.getElementById('dropdown-menu');
-      dropdown.classList.toggle('show'); 
-    }
-    window.onclick = function(event) {
-      const dropdown = document.getElementById('dropdown-menu');
-      const personIcon = document.querySelector('.person-icon');
-      if (!personIcon.contains(event.target)) {
-        dropdown.classList.remove('show'); 
-      }
-    }
-  </script>
+  <script src="toggle.js"></script>
 </body>
 </html>
