--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -24,7 +24,7 @@
         <div class="person-icon" onclick="toggleDropdown()">
           <img src="person.png" alt="Person Icon" class="person-icon img">
           <div class="dropdown-menu" id="dropdown-menu">
-            <a href="index.html">Log out</a>
+            <div class="logout" onclick="logout()">Log out</div>
           </div>
        </div>
         <div class="flag-icon">
