--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -47,7 +47,7 @@
             let coachImage = ''; 
             
             if (result.score >= 6) {
-                personalizedMessage = 'Excellent job! Just a few final steps to finish. Please contact our coach, Morgan Fireman, for further assistance';
+                personalizedMessage = 'Excellent job! Just a few final steps to finish. Please contact our coach, John Doe, for further assistance';
                 coachImage = 'coach_1.png'; 
             } else if (result.score >= 1) {
                 personalizedMessage = 'Good effort! You’re almost there! Please contact our coach, Michael Levis, for further assistance';
