--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -47,7 +47,7 @@
             <ul>
                 <li><a href="quiz.html" id="quiz-link" style ="color:black; font-size: 20px; font-weight: bold">Self-Defense Preparedness Quiz</a></li>
                 <li><a href="chat.html" id="chat-link" style ="color:black; font-size: 20px; font-weight: bold">Trainer Chat & Support</a></li>
-                <li><a href="vr-glasses.html" style ="color:black; font-size: 20px; font-weight: bold">Virtual Reality Training (Coming Soon)</a></li>
+                <li><a href="vr-glasses.html" id="vr-link" style ="color:black; font-size: 20px; font-weight: bold">Virtual Reality Training (Coming Soon)</a></li>
             </ul>
             <h3>Why Choose SafeSense?</h3>
             <p>We are more than just a self-defense platform—we’re a community...</p>
