--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -45,17 +45,17 @@
             <p>At SafeSense, we believe that everyone has the right to feel safe, no matter where they are...</p>
             <h3>What We Offer</h3>
             <ul>
-                <li><a href="quiz.html" id="quiz-link" style ="color:black; font-size: 20px; font-weight: bold">Self-Defense Preparedness Quiz</a></li>
-                <li><a href="chat.html" id="chat-link" style ="color:black; font-size: 20px; font-weight: bold">Trainer Chat & Support</a></li>
+                <li><a href="quiz.html" id="quiz-link" style ="color:black; font-size: 20px; font-weight: bold">Self-Defense Preparedness Quiz</a></li><br>
+                <li><a href="chat.html" id="chat-link" style ="color:black; font-size: 20px; font-weight: bold">Trainer Chat & Support</a></li><br>
                 <li><a href="vr-glasses.html" id="vr-link" style ="color:black; font-size: 20px; font-weight: bold">Virtual Reality Training (Coming Soon)</a></li>
             </ul>
             <h3>Why Choose SafeSense?</h3>
             <p>We are more than just a self-defense platform—we’re a community...</p>
         </div>
-    </div>
-    <script src="limitChatQuiz.js"></script> 
+    </div>    
     <script src="script.js"></script>
-    <script src="toggle.js"></script> 
+    <script src="toggle.js"></script>S
+    <script src="limitChatQuiz.js"></script> 
    
 </body>
 </html>
