--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -14,17 +14,22 @@
     </style>
 
     <!-- Start of Tawk.to Script (Move this to the head so it loads on page load) -->
-    <script type="text/javascript">
-      var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-      (function(){
-          var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-          s1.async = true;
-          s1.src = 'https://embed.tawk.to/6758a23749e2fd8dfef5fa5d/1iep3jau7';  /* Ensure this script URL is correct */
-          s1.charset = 'UTF-8';
-          s1.setAttribute('crossorigin', '*');
-          s0.parentNode.insertBefore(s1, s0);
-      })();
-    </script>
+<!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/6758a23749e2fd8dfef5fa5d/1iep3jau7';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  
+  <!--End of Tawk.to Script-->
     <!-- End of Tawk.to Script -->
 </head>
 <body>
