--- a/backend/frontend/chat.html
+++ b/backend/frontend/chat.html
@@ -75,16 +75,18 @@
       <div id="chatbot-container-coach_1" class="chatbot-container" style="display: none;">
         <div id='tawk_6758a23749e2fd8dfef5fa5d'></div>
 <!--Start of Tawk.to Script-->
-          <script type="text/javascript">
-              var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date(); Tawk_API.embedded='tawk_6758a23749e2fd8dfef5fa5d';
-              (function(){
-              var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-              s1.async=true;
-              s1.src='https://embed.tawk.to/6758a23749e2fd8dfef5fa5d/1iesmu9rn';
-              s1.charset='UTF-8';
-              s1.setAttribute('crossorigin','*');
-              s0.parentNode.insertBefore(s1,s0);})();
-          </script>
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6758a23749e2fd8dfef5fa5d/1iep3jau7';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 <!--End of Tawk.to Script-->
       </div>
   
