--- a/backend/frontend/chat1.html
+++ b/backend/frontend/chat1.html
@@ -6,7 +6,7 @@
     <title>Chat</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="canv.css"> 
-    <!-- <style>
+    <style>
         
         #chatbot-container {
             display: none; 
@@ -24,7 +24,7 @@
       s1.setAttribute('crossorigin','*');
       s0.parentNode.insertBefore(s1,s0);
       })();
-    </script> -->
+    </script>
     
 </head>
 <body>
